# qol-tray

./: .gitignore  .releaserc.json  CLAUDE.md  Cargo.toml  GETTING_STARTED.md  HANDOFF.md  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
assets/: icon.rgba  qol-tray.desktop
debian/: postinst
examples/plugins/screen-recorder/: config.json  plugin.toml  run.sh
src/: lib.rs  main.rs  paths.rs  version.rs
src/daemon/: events.rs  init.rs  mod.rs  state.rs
src/dev/: config.rs  discovery.rs  linking.rs  mod.rs
src/features/: mod.rs
src/features/plugin_manager/: loader.rs  manager.rs  mod.rs
src/features/plugin_store/: github.rs  installer.rs  mod.rs  plugin_ui.rs  server.rs
src/features/task_runner/: mod.rs
src/features/tray/: icon.rs  menu.rs  mod.rs
src/features/tray/platform/: linux.rs  mod.rs  windows.rs
src/hotkeys/: mod.rs  types.rs
src/menu/: builder.rs  mod.rs  router.rs
src/plugins/: config.rs  loader.rs  manager.rs  manifest.rs  mod.rs
src/tray/: icon.rs  mod.rs
src/tray/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/updates/: mod.rs
tests/menu/: router.rs
ui/: app.js  events.js  index.html  installing.js  main.js  store.html  store.js  style.css  utils.js
ui/components/: sidebar.js
ui/features/task-runner/: style.css  view.js
ui/views/: dev.js  hotkeys.js  plugins.js  store.js
