[package]
name = "qol-tray"
version = "1.4.3"
edition = "2021"
description = "Quality of Life Tray - Pluggable system tray daemon for utility scripts"
license = "MIT"
authors = ["KMRH47"]

[[bin]]
name = "qol-tray"
path = "src/main.rs"

[lib]
name = "qol_tray"
path = "src/lib.rs"

[features]
default = []
dev = []

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# System tray
tray-icon = "0.21.2"

# Path utilities
dirs = "6.0.0"
open = "5"

# Global state management
once_cell = "1.19"

# Web server for plugin store UI
axum = { version = "0.8.7", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }

# HTTP client for GitHub API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Global hotkeys
global-hotkey = { version = "0.7", features = ["serde"] }

# Embed static files
rust-embed = "8.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"

[package.metadata.deb]
maintainer = "KMRH47"
copyright = "2025, KMRH47"
extended-description = """\
Quality of Life Tray - A pluggable system tray daemon for managing utility scripts and tools.
Load custom plugins to extend functionality."""
depends = "$auto, libgtk-3-0, libayatana-appindicator3-1"
section = "utils"
priority = "optional"
assets = [
    ["target/release/qol-tray", "usr/bin/", "755"],
    ["assets/qol-tray.desktop", "usr/share/applications/", "644"],
    ["assets/icon.png", "usr/share/icons/hicolor/64x64/apps/qol-tray.png", "644"],
]
maintainer-scripts = "debian/"
